[tool.poetry]
name = "canalyzing"
version = "0.1.0"
description = ""
authors = ["tsabelmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
python-can = "^3.3.4"
cantools = "^36.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
canalyzing = "canalyzing:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
